Timezone Draft | 2026.01.30 Friday 15:41

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <p>Hola, I’m Alberto Campos, best known as Azul</p>
+    <a href="emon/public/index.html"></a>
+    <a href="timezone/index.html"></a>
   </body>
 </html>
