--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>Portfolio for Alberto Campos</title>
   </head>
   <body>
-    <p>Hola, I’m Alberto Campos, best known as Azul</p>
-    <a href="emon/public/index.html"></a>
-    <a href="timezone/index.html"></a>
+    <main>
+      <span class="chrono-pill">UTC+00:00</span>
+      <h1>Design System Architect</h1>
+      <p>
+        Hola, I’m Alberto Campos, best known as Azul. You are visualizing time
+        as a fluid dimension. A high-precision interface focused on the mental
+        model of temporal tracks and global synchronization.
+      </p>
+      <nav>
+        <a href="#">Projects</a>
+        <a href="#">Philosophy</a>
+        <a href="#">Contact</a>
+      </nav>
+    </main>
+    <section>
+      <h2>Projects</h2>
+      <a href="emon/public/index.html">emon</a>
+      <a href="timezone/index.html">time-zone</a>
+    </section>
   </body>
 </html>
